v1.2.0
-Change: Soul Chest texture
-Change: Rename Necrotic Seeds to Quarz Berry Seeds
-Change: Rename Necrotic Bush to Quarz Better Bush
-Change: Nether crops can grown outside the nether
-Added: Baseball Bat
-Change: Dense Lava Cell will burn flammable blocks nearby just like lava would
-Change: Dense Lava Cell will set any entity that collides with it on fire
-Added: Coloured Glow Boxes
-Added: Dense Lava Cell facade
-Added: Sceptre of Concealment

v1.2.1
-Fix: NetherCrops being planted on tilled dirt
-Improvement: Scepter of Concealment will drop Normal Skeleton or Wither Skeleton eggs. Instead of vanilla skeleton egg

v1.2.2
-Add: Coloured quartz blocks
-Add: Soul Glass Brick
-Change: new textures Glow Box and Baseball Bat
-Add: Soul Glass Brick Stairs
-Add: Coloured quartz stairs
-Change: Glow Box hardness increased

v1.3
-Change: config for nether crops world gen
-Change: Soul Chest will eat any items that collide with it
-Added: Coloured Quartz Pillars
-Added: Reproducer
-Added: Silverfish Scales
-Added: Bat Wings, Cooked Bat Wings and Wolf Teeth
-Added: Blaze Amour, ingots and mesh

v1.4
-Change: New recipe for Reproducer
-Change: Blaze armour model and effects
-Added: Undertaker
-Added: Sceptre of Fire Charging
-Added: Sceptre of Lightning
-Change: New recipe for Sceptre of Concealment