@@ -38,3 +38,4 @@ v1.4
 -Added: Sceptre of Fire Charging
 -Added: Sceptre of Lightning
 -Change: New recipe for Sceptre of Concealment
+-Added: Wither Shrub
